# WatermelonMediaPlayer

./: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.github/workflows/: Structures.yml  ci.yml  scaffold.yml  watermelon.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/watermelon/player/: MainActivity.kt  WatermelonApp.kt
app/src/main/kotlin/com/watermelon/player/callback/: CoreEventAdapter.kt
app/src/main/kotlin/com/watermelon/player/config/: RegionalConfig.kt
app/src/main/kotlin/com/watermelon/player/database/: FolderVisibility.kt  FolderVisibilityDao.kt  MediaDatabase.kt  VideoDao.kt  VideoEntity.kt
app/src/main/kotlin/com/watermelon/player/platform/: AudioFocusManager.kt  NetworkSocketProvider.kt  SurfaceProvider.kt  ThermalMonitor.kt
app/src/main/kotlin/com/watermelon/player/player/: MediaSessionManager.kt  PiPManager.kt  WatermelonPlayer.kt
app/src/main/kotlin/com/watermelon/player/repository/: FolderRepository.kt  MediaRepository.kt  PlaylistRepository.kt
app/src/main/kotlin/com/watermelon/player/rust/: WatermelonCore.kt  WatermelonEventCallback.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: leanback_launcher.xml
codec-plugin/: Cargo.toml
codec-plugin/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
rust-core/: Cargo.toml
rust-core/src/: audio.rs  builds.rs  callback.rs  decoder.rs  engine.rs  error.rs  jni_bridge.rs  lib.rs  playlist_parser.rs  plugin_host.rs  subtitle.rs  types.rs
rust-core/tests/: engine_test.rs
(+25 files in other folders)
