# rust-core/Cargo.toml
[package]
name = "watermelon-core"
version = "0.1.0"
edition = "2021"
description = "Watermelon MediaPlayer – Rust core engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
thiserror = "1.0.40"
log = "0.4.20"
android_logger = "0.13.3"
symphonia = { version = "0.5", features = ["all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.14"

[target.'cfg(target_os = "android")'.dependencies]
oboe = "0.6.0"